--- a/niudot-app/src/assets/styles/_inputs.scss
+++ b/niudot-app/src/assets/styles/_inputs.scss
@@ -2,7 +2,7 @@
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	grid-auto-rows: minmax($input-height, auto);
-	width: 40rem;
+	max-width: 40rem;
 	gap: 0.75rem;
 	margin-bottom: 4rem;
 	&:last-child {
