--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -2,8 +2,7 @@
 * {
   padding: 0;
   margin: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: inherit;
 }
 
@@ -13,7 +12,7 @@
 
 html,
 body {
-  font-family: 'Nunito', sans-serif !important;
+  font-family: "Nunito", sans-serif !important;
   background-color: #1e2530;
   color: #ffffff;
 }
@@ -35,42 +34,31 @@ body {
 }
 
 .form-container {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[12];
-      grid-template-columns: repeat(12, 1fr);
+  grid-template-columns: repeat(12, 1fr);
   grid-auto-rows: minmax(2.5rem, auto);
-  width: 40rem;
+  max-width: 40rem;
   gap: 0.75rem;
   margin-bottom: 4rem;
 }
-
 .form-container:last-child {
   margin-bottom: 0;
 }
 
 .input-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
 
-.input-container-lg, .input-container-md, .input-container-sm, .input-container-xs {
+.input-container-xs, .input-container-sm, .input-container-md, .input-container-lg {
   width: 100%;
 }
 
-.std-input, .alt-input {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.alt-input, .std-input {
   display: flex;
   height: 2.5rem;
   padding: 0 0.75rem;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   font-size: 0.87rem;
   caret-color: #ffffff;
   color: #ffffff;
@@ -78,28 +66,13 @@ body {
   border: none;
   outline: none;
 }
-
-.std-input::-webkit-input-placeholder, .alt-input::-webkit-input-placeholder {
-  color: #9ba6ad;
-}
-
-.std-input:-ms-input-placeholder, .alt-input:-ms-input-placeholder {
-  color: #9ba6ad;
-}
-
-.std-input::-ms-input-placeholder, .alt-input::-ms-input-placeholder {
-  color: #9ba6ad;
-}
-
-.std-input::placeholder, .alt-input::placeholder {
+.alt-input::placeholder, .std-input::placeholder {
   color: #9ba6ad;
 }
 
 .std-input {
   width: 100%;
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
+  flex: 1;
 }
 
 .alt-input-container {
@@ -111,13 +84,11 @@ body {
   text-align: center;
 }
 
-.input-btn, .form-btn-success, .form-btn-primary, .form-btn-alert {
+.form-btn-alert, .form-btn-primary, .form-btn-success, .input-btn {
   height: 2.5rem;
-  -webkit-transition: opacity 100ms;
   transition: opacity 100ms;
 }
-
-.input-btn:hover, .form-btn-success:hover, .form-btn-primary:hover, .form-btn-alert:hover, .input-btn:active, .form-btn-success:active, .form-btn-primary:active, .form-btn-alert:active, .input-btn:focus, .form-btn-success:focus, .form-btn-primary:focus, .form-btn-alert:focus {
+.form-btn-alert:hover, .form-btn-primary:hover, .form-btn-success:hover, .input-btn:hover, .form-btn-alert:active, .form-btn-primary:active, .form-btn-success:active, .input-btn:active, .form-btn-alert:focus, .form-btn-primary:focus, .form-btn-success:focus, .input-btn:focus {
   opacity: 0.8;
 }
 
@@ -138,49 +109,31 @@ body {
 }
 
 .input-container-md-nl {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 6;
-  grid-column: 1 / span 6;
+  grid-column: 1/span 6;
 }
 
 .input-container-sm-nl {
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-column: 1 / span 3;
+  grid-column: 1/span 3;
 }
 
 .input-container-flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 .input-btn {
   width: 2rem;
   min-width: 2rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   background-color: #456cf6;
   cursor: pointer;
 }
 
-.form-btn-success, .form-btn-primary, .form-btn-alert {
-  display: -webkit-box;
-  display: -ms-flexbox;
+.form-btn-alert, .form-btn-primary, .form-btn-success {
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   color: #ffffff;
   outline: none;
   border: none;
@@ -208,35 +161,23 @@ body {
 }
 
 tr {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   height: 2.5rem;
 }
 
-thead th, tbody td {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
+tbody td, thead th {
+  flex: 1;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 thead th {
   background-color: #456cf6;
 }
-
 thead th:first-child {
   border-radius: 0.5rem 0 0 0;
 }
-
 thead th:last-child {
   border-radius: 0 0.5rem 0 0;
 }
@@ -244,11 +185,9 @@ thead th:last-child {
 tbody tr:last-of-type td:first-child {
   border-radius: 0 0 0 0.5rem;
 }
-
 tbody tr:last-of-type td:last-child {
   border-radius: 0 0 0.5rem 0;
 }
-
 tbody td {
   background-color: #353c4a;
 }
@@ -256,9 +195,7 @@ tbody td {
 #niudot-title {
   font-family: "Nunito Sans", sans-serif;
   padding: 1rem;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  align-self: center;
 }
 
 .sidebar {
@@ -268,96 +205,64 @@ tbody td {
   color: #FFFFFF;
   position: fixed;
 }
-
 .sidebar .navbar-list {
   padding: 0 1rem;
 }
-
 .sidebar .navbar-list li {
   cursor: pointer;
   padding: 1rem;
   margin-bottom: 0.25rem;
   list-style-type: none;
-  -webkit-transition: background 100ms;
   transition: background 100ms;
 }
-
 .sidebar .navbar-list li:hover {
   background-color: #456cf6;
 }
-
 .sidebar .navbar-list li span {
   margin-right: 1rem;
 }
-
 .sidebar .user-dropdown {
   margin: auto;
   margin-bottom: 1rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   height: 3rem;
 }
-
 .sidebar .user-dropdown .user-img {
   margin-right: 0.5rem;
 }
-
 .sidebar .user-dropdown .user-img img {
   display: block;
   height: 2.75rem;
   border-radius: 1.1rem;
 }
-
 .sidebar .user-dropdown .vertical-container {
   margin-right: 0.5rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  flex-direction: column;
+  align-items: flex-start;
 }
-
 .sidebar .user-dropdown .vertical-container .user-name {
   font-size: 0.75rem;
 }
-
 .sidebar .user-dropdown .vertical-container .user-role {
   padding: 0.15rem 0.75rem;
   border-radius: 0.35rem;
   background-color: #6cd7cb;
   margin-top: 0.2rem;
   font-size: 0.75rem;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  justify-content: center;
 }
-
 .sidebar .user-dropdown .arrow-container {
   width: 1.25rem;
   height: 1.25rem;
   border-radius: 50%;
   border: 2px solid gray;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   cursor: pointer;
 }
-
 .sidebar .user-dropdown .arrow-container svg {
   width: 0.75rem;
 }
@@ -367,29 +272,54 @@ tbody td {
   width: calc(100% - 12rem);
   margin-left: 12rem;
 }
-
 .dashboard .topbar {
   height: 70px;
   width: 100%;
   background-color: #283140;
   position: fixed;
 }
-
 .dashboard .topbar h2 {
   padding-left: 1rem;
   vertical-align: middle;
   line-height: 70px;
 }
-
 .dashboard body {
   padding: 2rem;
   padding-top: calc(70px + 2rem);
 }
-
 .dashboard h4 {
   color: #9ba6ad;
   font-weight: lighter;
   padding-top: 0.5rem;
   padding-bottom: 1rem;
 }
-/*# sourceMappingURL=styles.css.map */
+
+@media screen and (max-width: 690px) {
+  .input-container-md {
+    grid-column: span 12;
+  }
+
+  .input-container-sm {
+    grid-column: span 6;
+  }
+
+  .input-container-xs {
+    grid-column: span 2;
+  }
+
+  .input-container-md-nl {
+    grid-column: 1/-1;
+  }
+
+  .input-container-sm-nl {
+    grid-column: 1/span 6;
+  }
+
+  .sidebar {
+    display: none;
+  }
+
+  .dashboard {
+    margin: 0;
+  }
+}
