--- a/niudot-app/src/assets/styles/_config.scss
+++ b/niudot-app/src/assets/styles/_config.scss
@@ -19,10 +19,19 @@ $dark-caret: #ffffff;
 	margin: 0;
 	box-sizing: border-box;
 	font-family: inherit;
+	color: inherit;
 }
 
 :root {
 	font-size: 16px;
+}
+
+a {
+	text-decoration: none;
+}
+
+li {
+	list-style: none;
 }
 
 html,
