--- a/niudot-app/src/assets/styles/_page.scss
+++ b/niudot-app/src/assets/styles/_page.scss
@@ -1,4 +1,4 @@
-.dashboard {
+.page {
 	min-height: 100%;
 	width: calc(100% - 12rem);
 	margin-left: 12rem;
@@ -8,15 +8,16 @@
 		width: 100%;
 		background-color: $nav-background;
 		position: fixed;
+		display: flex;
+		align-items: center;
 
 		h2 {
 			padding-left: 1rem;
 			vertical-align: middle;
-			line-height: 70px;
 		}
 	}
 
-	body {
+	main {
 		padding: 2rem;
 		padding-top: calc(70px + 2rem);
 	}
