--- a/niudot-app/src/assets/styles/_sidebar.scss
+++ b/niudot-app/src/assets/styles/_sidebar.scss
@@ -1,87 +1,61 @@
-#niudot-title {
-    font-family: "Nunito Sans", sans-serif;
-    padding: 1rem;
-    align-self: center;
+.sidebar-container {
+    width: 12rem;
+    height: 100%;
+    background-color: $nav-background;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
 }
 
-.sidebar {
-	width: 12rem;
-	height: 100%;
-    background-color: $nav-background;
-    color: #FFFFFF;
-    position: fixed;
-    
-    .navbar-list {
-        padding: 0 1rem;
+.sidebar-nav-list {
+    margin: 2rem 0;
+    padding: 0 1rem;
+}
 
-        li {
-            cursor: pointer;
-            padding: 1rem;
-            margin-bottom: 0.25rem;
-            list-style-type: none;
-            transition: background 100ms;
+.navbar-list-item {
+    height: 2.5rem;
+    display: flex;
+    align-items: center;
+    margin: 0.5rem 0;
+    padding: 0 0.75rem;
+    cursor: pointer;
+    position: relative;
 
-            &:hover {
-                background-color: $dark-primary;
-            }
-
-            span {
-                margin-right: 1rem;;
-            }
-        }
+    &:hover {
+        background-color: $dark-primary;
     }
 
-    .user-dropdown {
-        margin: auto;
-        margin-bottom: 1rem;
+    a {
         display: flex;
         align-items: center;
-        height: 3rem;
-    
-        .user-img {
-            margin-right: 0.5rem;
-    
-            img {
-                display: block;
-                height: 2.75rem;
-                border-radius: 1.1rem;
-            }
-        }
-    
-        .vertical-container {
-            margin-right: 0.5rem;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-    
-            .user-name {
-                font-size: 0.75rem;
-            }
-    
-            .user-role {
-                padding: 0.15rem 0.75rem;
-                border-radius: 0.35rem;
-                background-color: #6cd7cb;
-                margin-top: 0.2rem;
-                font-size: 0.75rem;
-                justify-content: center;
-            }
-        }
-    
-        .arrow-container {
-            width: 1.25rem;
-            height: 1.25rem;
-            border-radius: 50%;
-            border: 2px solid gray;
-    
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-    
-            svg {
-                width: 0.75rem;
-            }
-        }
+        width: 100%;
+        height: 100%;
     }
+
+    .dropdown-menu {
+        position: absolute;
+        bottom: -100%;
+        left: 0;
+    }
+}
+
+.active {
+    background-color: $dark-primary;
+}
+
+.dropdown-menu-option {
+    &:first-child {
+        margin-top: 1rem;
+    }
+    padding: 0.5rem 1rem;
+    cursor: pointer;
+    font-size: 0.9rem;
+
+    &:hover {
+        background-color: lighten($dark-secondary, 15%);
+    }
+}
+
+.dropdown-option-active {
+    color: $dark-primary;
 }
