First draft Persona Natural

--- a/niudot-app/src/assets/styles/_config.scss
+++ b/niudot-app/src/assets/styles/_config.scss
@@ -20,6 +20,7 @@ $dark-caret: #ffffff;
 	box-sizing: border-box;
 	font-family: inherit;
 	color: inherit;
+	font-family: 'Nunito Sans';
 }
 
 :root {
