--- a/niudot-app/src/assets/styles/_inputs.scss
+++ b/niudot-app/src/assets/styles/_inputs.scss
@@ -154,3 +154,14 @@
 	background-color: $dark-alert;
 }
 
+input[type=checkbox] {
+    transform: scale(1.5);
+}
+
+h2 {
+	font-weight: bold;
+}
+
+h3 {
+	font-size: 20px;
+}
