--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   font-family: inherit;
   color: inherit;
+  font-family: "Nunito Sans";
 }
 
 :root {
@@ -165,6 +166,18 @@ body {
 
 .form-btn-alert {
   background-color: #bd783f;
+}
+
+input[type=checkbox] {
+  transform: scale(1.5);
+}
+
+h2 {
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 20px;
 }
 
 .table-container {
