--- a/niudot-app/src/assets/styles/_mobile.scss
+++ b/niudot-app/src/assets/styles/_mobile.scss
@@ -19,12 +19,12 @@
 		grid-column: 1 / span 6;
 	}
 
-	.sidebar {
+	.sidebar-container {
 		// ! Cambiar esto luego
 		display: none;
 	}
 
-	.dashboard {
+	.page {
 		margin: 0;
 	}
 }
