--- a/niudot-app/src/assets/styles/_sidebar.scss
+++ b/niudot-app/src/assets/styles/_sidebar.scss
@@ -1,61 +1,70 @@
 .sidebar-container {
-    width: 12rem;
-    height: 100%;
-    background-color: $nav-background;
-    position: fixed;
-    display: flex;
-    flex-direction: column;
+	position: fixed;
+	width: 12rem;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+
+	background-color: $nav-background;
 }
 
-.sidebar-nav-list {
-    margin: 2rem 0;
-    padding: 0 1rem;
+.sidebar-logo {
+	text-align: center;
+	padding: 1rem;
 }
 
-.navbar-list-item {
-    height: 2.5rem;
-    display: flex;
-    align-items: center;
-    margin: 0.5rem 0;
-    padding: 0 0.75rem;
-    cursor: pointer;
-    position: relative;
-
-    &:hover {
-        background-color: $dark-primary;
-    }
-
-    a {
-        display: flex;
-        align-items: center;
-        width: 100%;
-        height: 100%;
-    }
-
-    .dropdown-menu {
-        position: absolute;
-        bottom: -100%;
-        left: 0;
-    }
+.sidebar-nav {
+	margin: 1rem 0;
+	padding: 0 1rem;
 }
 
-.active {
-    background-color: $dark-primary;
+.sidebar-list-item {
+	height: $input-height;
+	margin: 0.5rem 0;
+	padding: 0 0.75rem;
+
+	position: relative;
+
+	cursor: pointer;
+	transition: background-color $transition-default;
+
+	&:hover {
+		background-color: $color-primary;
+	}
+}
+
+.sidebar-list-item-info {
+	height: 100%;
+	display: flex;
+	align-items: center;
+}
+
+.sidebar-dropdown-menu {
+	padding-left: 0.75rem;
+
+	.sidebar-dropdown-item {
+		padding: 0.5rem 0;
+		font-size: 0.9rem;
+
+		&:hover {
+			color: $color-primary;
+		}
+	}
+}
+
+.is-active {
+	background-color: $color-primary;
 }
 
 .dropdown-menu-option {
-    &:first-child {
-        margin-top: 1rem;
-    }
-    padding: 0.5rem 1rem;
-    cursor: pointer;
-    font-size: 0.9rem;
+	padding: 0.5rem 1rem;
+	cursor: pointer;
+	font-size: 0.9rem;
+	color: $color-text-secondary;
+	display: flex;
+	align-items: center;
 
-    &:hover {
-        background-color: lighten($dark-secondary, 15%);
-    }
-}
-
-.dropdown-option-active {
-    color: $dark-primary;
+	&:hover {
+		color: $color-primary;
+	}
 }
