--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -1,324 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,300;0,400;0,600;0,700;1,300&display=swap");
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: inherit;
-  color: inherit;
-  font-family: "Nunito Sans";
-}
+/* Error: The target selector was not found.
+ * Use "@extend %input !optional" to avoid this error.
+ *    ,
+ * 42 |     @extend %input;
+ *    |     ^^^^^^^^^^^^^^
+ *    '
+ *   src\assets\styles\_inputs.scss 42:2  root stylesheet */
 
-:root {
-  font-size: 16px;
-}
-
-a {
-  text-decoration: none;
-}
-
-li {
-  list-style: none;
-}
-
-html,
-body {
-  font-family: "Nunito", sans-serif !important;
-  background-color: #1e2530;
-  color: #ffffff;
-}
-
-.rounded {
-  border-radius: 0.5rem;
-}
-
-.rounded-l {
-  border-radius: 0.5rem 0 0 0.5rem;
-}
-
-.rounded-r {
-  border-radius: 0 0.5rem 0.5rem 0;
-}
-
-.icon {
-  color: #ffffff;
-}
-
-.form-container {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-auto-rows: minmax(2.5rem, auto);
-  max-width: 40rem;
-  gap: 0.75rem;
-  margin-bottom: 4rem;
-}
-.form-container:last-child {
-  margin-bottom: 0;
-}
-
-.input-container {
-  display: flex;
-  align-items: center;
-}
-
-.input-container-xs, .input-container-sm, .input-container-md-sm, .input-container-md, .input-container-lg {
-  width: 100%;
-}
-
-.alt-input, .std-input {
-  display: flex;
-  height: 2.5rem;
-  padding: 0 0.75rem;
-  align-items: center;
-  font-size: 0.87rem;
-  caret-color: #ffffff;
-  color: #ffffff;
-  background-color: #353c4a;
-  border: none;
-  outline: none;
-}
-.alt-input::placeholder, .std-input::placeholder {
-  color: #9ba6ad;
-}
-
-.std-input {
-  width: 100%;
-  flex: 1;
-}
-
-.alt-input-container {
-  margin: 0 0.75rem;
-}
-
-.input-checkbox-content {
-  width: 100%;
-  text-align: center;
-}
-
-.form-btn-alert, .form-btn-primary, .form-btn-success, .input-btn {
-  height: 2.5rem;
-  transition: opacity 150ms;
-}
-.form-btn-alert:hover, .form-btn-primary:hover, .form-btn-success:hover, .input-btn:hover, .form-btn-alert:active, .form-btn-primary:active, .form-btn-success:active, .input-btn:active, .form-btn-alert:focus, .form-btn-primary:focus, .form-btn-success:focus, .input-btn:focus {
-  opacity: 0.8;
-}
-
-.input-container-lg {
-  grid-column: span 12;
-}
-
-.input-container-md {
-  grid-column: span 6;
-}
-
-.input-container-md-sm {
-  grid-column: span 4;
-}
-
-.input-container-sm {
-  grid-column: span 3;
-}
-
-.input-container-xs {
-  grid-column: span 1;
-}
-
-.input-container-md-nl {
-  grid-column: 1/span 6;
-}
-
-.input-container-sm-nl {
-  grid-column: 1/span 3;
-}
-
-.input-container-flex {
-  display: flex;
-}
-
-.input-btn {
-  width: 2.5rem;
-  min-width: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #456cf6;
-  cursor: pointer;
-}
-
-.form-btn-alert, .form-btn-primary, .form-btn-success {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #ffffff;
-  outline: none;
-  border: none;
-  cursor: pointer;
-  font-weight: regular;
-  font-size: 1rem;
-}
-
-.form-btn-success {
-  background-color: #36a794;
-}
-
-.form-btn-primary {
-  background-color: #456cf6;
-}
-
-.form-btn-alert {
-  background-color: #bd783f;
-}
-
-input[type=checkbox] {
-  transform: scale(1.5);
-}
-
-.table-container {
-  grid-column: 1/-1;
-  color: white;
-  border-collapse: collapse;
-}
-
-tr {
-  display: flex;
-  height: 2.5rem;
-}
-
-tbody td, thead th {
-  flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-thead th {
-  background-color: #456cf6;
-}
-thead th:first-child {
-  border-radius: 0.5rem 0 0 0;
-}
-thead th:last-child {
-  border-radius: 0 0.5rem 0 0;
-}
-
-tbody tr:last-of-type td:first-child {
-  border-radius: 0 0 0 0.5rem;
-}
-tbody tr:last-of-type td:last-child {
-  border-radius: 0 0 0.5rem 0;
-}
-tbody td {
-  background-color: #353c4a;
-}
-
-.sidebar-container {
-  position: fixed;
-  width: 12rem;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: #283140;
-}
-
-.sidebar-logo {
-  text-align: center;
-  padding: 1rem;
-}
-
-.sidebar-nav {
-  margin: 1rem 0;
-  padding: 0 1rem;
-}
-
-.sidebar-list-item {
-  height: 2.5rem;
-  margin: 0.5rem 0;
-  padding: 0 0.75rem;
-  position: relative;
-  cursor: pointer;
-  transition: background-color 150ms;
-}
-.sidebar-list-item:hover {
-  background-color: #456cf6;
-}
-
-.sidebar-list-item-info {
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.sidebar-dropdown-menu {
-  padding-left: 0.75rem;
-}
-.sidebar-dropdown-menu .sidebar-dropdown-item {
-  padding: 0.5rem 0;
-  font-size: 0.9rem;
-}
-.sidebar-dropdown-menu .sidebar-dropdown-item:hover {
-  color: #456cf6;
-}
-
-.is-active {
-  background-color: #456cf6;
-}
-
-.dropdown-menu-option {
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  font-size: 0.9rem;
-  color: #9ba6ad;
-  display: flex;
-  align-items: center;
-}
-.dropdown-menu-option:hover {
-  color: #456cf6;
-}
-
-.page {
-  min-height: 100%;
-  width: calc(100% - 12rem);
-  margin-left: 12rem;
-}
-.page .topbar {
-  z-index: 1;
-  height: 70px;
-  width: 100%;
-  background-color: #283140;
-  position: fixed;
-  display: flex;
-  align-items: center;
-}
-.page main {
-  padding: 2rem;
-  padding-top: calc(70px + 2rem);
-}
-
-@media screen and (max-width: 690px) {
-  .input-container-md {
-    grid-column: span 12;
-  }
-
-  .input-container-sm {
-    grid-column: span 6;
-  }
-
-  .input-container-xs {
-    grid-column: span 2;
-  }
-
-  .input-container-md-nl {
-    grid-column: 1/-1;
-  }
-
-  .input-container-sm-nl {
-    grid-column: 1/span 6;
-  }
-
-  .sidebar-container {
-    display: none;
-  }
-
-  .page {
-    margin: 0;
-  }
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: The target selector was not found.\aUse "@extend %input !optional" to avoid this error.\a    \2577 \a 42 \2502      @extend %input;\d\a    \2502      ^^^^^^^^^^^^^^\a    \2575 \a   src\\assets\\styles\\_inputs.scss 42:2  root stylesheet';
 }
