--- a/niudot-app/src/assets/styles/_mobile.scss
+++ b/niudot-app/src/assets/styles/_mobile.scss
@@ -25,6 +25,12 @@
 	}
 
 	.page {
+		width: 100%;
 		margin: 0;
+	}
+
+	.page-container {
+		padding: 1rem;
+		padding-top: calc(4rem + 1rem);
 	}
 }
