--- a/niudot-app/src/assets/styles/_page.scss
+++ b/niudot-app/src/assets/styles/_page.scss
@@ -2,19 +2,20 @@
 	min-height: 100%;
 	width: calc(100% - 12rem);
 	margin-left: 12rem;
+}
 
-	.topbar {
-		z-index: 1;
-		height: 70px;
-		width: 100%;
-		background-color: $nav-background;
-		position: fixed;
-		display: flex;
-		align-items: center;
-	}
+.topbar {
+	width: 100%;
+	height: 4rem;
+	position: fixed;
+	display: flex;
+	align-items: center;
+	padding-left: 1rem;
 
-	main {
-		padding: 2rem;
-		padding-top: calc(70px + 2rem);
-	}
+	background-color: $nav-background;
+}
+
+.page-container {
+	padding: 2rem;
+	padding-top: calc(4rem + 2rem);
 }
