--- a/niudot-app/src/assets/styles/_sidebar.scss
+++ b/niudot-app/src/assets/styles/_sidebar.scss
@@ -52,11 +52,15 @@
 	}
 }
 
+.sidebar-item-icon {
+	margin-right: 0.5rem;
+}
+
 .is-active {
 	background-color: $color-primary;
 }
 
-.dropdown-menu-option {
+.sidebar-dropdown-item {
 	padding: 0.5rem 1rem;
 	cursor: pointer;
 	font-size: 0.9rem;
