Started login implementation

--- a/niudot-app/src/assets/styles/_config.scss
+++ b/niudot-app/src/assets/styles/_config.scss
@@ -36,6 +36,8 @@ li {
 
 html,
 body {
+	min-height: 100vh;
+	
 	font-family: 'Nunito', sans-serif !important;
 	background-color: $page-background;
 	color: $color-text-primary;
