--- a/niudot-app/src/assets/styles/_inputs.scss
+++ b/niudot-app/src/assets/styles/_inputs.scss
@@ -1,18 +1,31 @@
-.form-title {
-
-}
-
 .form-container {
+	max-width: 40rem;
+	margin-bottom: 2rem;
+
 	display: grid;
 	grid-template-columns: repeat(12, 1fr);
 	grid-auto-rows: minmax($input-height, auto);
-	max-width: 40rem;
 	gap: 0.75rem;
-	margin-bottom: 4rem;
+	
 	&:last-child {
 		margin-bottom: 0;
 	}
 }
+
+.form-title-container {
+	display: flex;
+	flex-direction: column;
+	margin-bottom: 1rem;
+
+	h2 {
+		margin-bottom: 0.5rem;
+	}
+
+	.form-description {
+		color: $color-text-secondary;
+	}
+}
+
 
 %form-field {
 	display: flex;
@@ -20,7 +33,7 @@
 	width: 100%;
 }
 
-%field {
+%input {
 	display: flex;
 	height: $input-height;
 	padding: 0 $input-x-padding;
@@ -57,94 +70,49 @@
 	text-align: center;
 }
 
-%btn {
-	height: $input-height;
-	transition: opacity $transition-default;
-	&:hover,
-	&:active,
-	&:focus {
-		opacity: 0.8;
-	}
-}
-
-.input-container-lg {
-	@extend %input-container;
+.form-field-xl {
+	@extend %form-field;
 	grid-column: span 12;
 }
 
-.input-container-md {
-	@extend %input-container;
+.form-field-lg {
+	@extend %form-field;
 	grid-column: span 6;
 }
 
-.input-container-md-sm {
-	@extend %input-container;
+.form-field-md {
+	@extend %form-field;
 	grid-column: span 4;
 }
 
-.input-container-sm {
-	@extend %input-container;
+.form-field-sm {
+	@extend %form-field;
 	grid-column: span 3;
 }
 
-.input-container-xs {
-	@extend %input-container;
+.form-field-xs {
+	@extend %form-field;
 	grid-column: span 1;
 }
 
-.input-container-md-nl {
+.form-field-lg-nl {
 	grid-column: 1 / span 6;
 }
 
-.input-container-sm-nl {
+.form-field-md-nl {
+	grid-column: 1 / span 4;
+}
+
+.form-field-sm-nl {
 	grid-column: 1 / span 3;
 }
 
-.input-container-flex {
+.form-field-xs-nl {
+	grid-column: 1 / span 1;
+}
+
+.form-field-flex {
 	display: flex;
-}
-
-.input-btn {
-	@extend %btn;
-
-	width: 2.5rem;
-	min-width: 2rem;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	background-color: $color-primary;
-	cursor: pointer;
-}
-
-%form-btn {
-	@extend %btn;
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
-
-	color: #ffffff;
-	outline: none;
-	border: none;
-	cursor: pointer;
-	font-weight: regular;
-	font-size: 1rem;
-}
-
-.form-btn-success {
-	@extend %form-btn;
-	background-color: $color-success;
-}
-
-.form-btn-primary {
-	@extend %form-btn;
-	background-color: $color-primary;
-}
-
-.form-btn-alert {
-	@extend %form-btn;
-	background-color: $color-alert;
 }
 
 input[type='checkbox'] {
