--- a/niudot-app/src/assets/styles/_mobile.scss
+++ b/niudot-app/src/assets/styles/_mobile.scss
@@ -1,24 +1,34 @@
-@media screen and (max-width: 690px) {
-	.input-container-md {
+@media screen and (max-width: 768px) {
+	.form-field-xl {
 		grid-column: span 12;
 	}
 
-	.input-container-sm {
+	.form-field-lg {
+		grid-column: span 12;
+	}
+
+	.form-field-md {
 		grid-column: span 6;
 	}
 
-	.input-container-xs {
-		grid-column: span 2;
+	.form-field-sm {
+		grid-column: span 6;
 	}
 
-	.input-container-md-nl {
-		grid-column: 1/ -1;
+	.form-field-xs {
+		grid-column: span 3;
 	}
 
-	.input-container-sm-nl {
+	.form-field-sm-nl {
 		grid-column: 1 / span 6;
 	}
 
+	.form-field-xs-nl {
+		grid-column: 1 / span 1;
+	}
+}
+
+@media screen and (max-width: 576px) {
 	.sidebar-container {
 		// ! Cambiar esto luego
 		display: none;
@@ -32,5 +42,25 @@
 	.page-container {
 		padding: 1rem;
 		padding-top: calc(4rem + 1rem);
+	}
+
+	.form-field-md {
+		grid-column: span 12;
+	}
+
+	.form-field-sm {
+		grid-column: span 6;
+	}
+
+	.form-field-xs {
+		grid-column: span 3;
+	}
+
+	.form-field-sm-nl {
+		grid-column: 1 / span 6;
+	}
+
+	.form-field-xs-nl {
+		grid-column: 1 / span 1;
 	}
 }
