--- a/niudot-app/src/assets/styles/_buttons.scss
+++ b/niudot-app/src/assets/styles/_buttons.scss
@@ -11,7 +11,7 @@
 	}
 }
 
-.input-btn {
+%input-btn {
 	@extend %btn;
 
 	width: 2.5rem;
@@ -20,8 +20,17 @@
 	justify-content: center;
 	align-items: center;
 
-	background-color: $color-primary;
 	cursor: pointer;
+}
+
+.input-btn-primary {
+	@extend %input-btn;
+	background-color: $color-primary;
+}
+
+.input-btn-transparent {
+	@extend %input-btn;
+	background-color: $color-secondary;
 }
 
 %form-btn {
