--- a/niudot-app/src/assets/styles/_inputs.scss
+++ b/niudot-app/src/assets/styles/_inputs.scss
@@ -1,3 +1,7 @@
+.form {
+	margin-bottom: 2rem;
+}
+
 .form-container {
 	max-width: 40rem;
 	margin-bottom: 2rem;
@@ -6,7 +10,7 @@
 	grid-template-columns: repeat(12, 1fr);
 	grid-auto-rows: minmax($input-height, auto);
 	gap: 0.75rem;
-	
+
 	&:last-child {
 		margin-bottom: 0;
 	}
@@ -19,13 +23,18 @@
 
 	h2 {
 		margin-bottom: 0.5rem;
+		-webkit-touch-callout: none; /* iOS Safari */
+		-webkit-user-select: none; /* Safari */
+		-khtml-user-select: none; /* Konqueror HTML */
+		-moz-user-select: none; /* Old versions of Firefox */
+		-ms-user-select: none; /* Internet Explorer/Edge */
+		user-select: none;
 	}
 
 	.form-description {
 		color: $color-text-secondary;
 	}
 }
-
 
 %form-field {
 	display: flex;
@@ -34,6 +43,7 @@
 }
 
 %input {
+	max-width: 100%;
 	display: flex;
 	height: $input-height;
 	padding: 0 $input-x-padding;
@@ -115,6 +125,33 @@
 	display: flex;
 }
 
+.form-retractile {
+	form {
+		// padding-left: 1.5rem;
+	}
+}
+
+.form-title-chevron {
+	flex-direction: row;
+	align-items: center;
+
+	cursor: pointer;
+
+	.form-retractile-chevron {
+		width: 1rem;
+		margin-right: 0.5rem;
+		transition: transform $transition-default;
+	}
+
+	.form-active {
+		transform: rotateZ(90deg);
+	}
+
+	h2 {
+		margin-bottom: 0;
+	}
+}
+
 input[type='checkbox'] {
-	transform: scale(1.5);
+	// Empty
 }
