--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -44,6 +44,10 @@ body {
   color: #ffffff;
 }
 
+.form {
+  margin-bottom: 2rem;
+}
+
 .form-container {
   max-width: 40rem;
   margin-bottom: 2rem;
@@ -63,6 +67,17 @@ body {
 }
 .form-title-container h2 {
   margin-bottom: 0.5rem;
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Old versions of Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
 }
 .form-title-container .form-description {
   color: #9ba6ad;
@@ -75,6 +90,7 @@ body {
 }
 
 .alt-input, .std-input {
+  max-width: 100%;
   display: flex;
   height: 2.5rem;
   padding: 0 0.75rem;
@@ -144,8 +160,21 @@ body {
   display: flex;
 }
 
-input[type=checkbox] {
-  transform: scale(1.5);
+.form-title-chevron {
+  flex-direction: row;
+  align-items: center;
+  cursor: pointer;
+}
+.form-title-chevron .form-retractile-chevron {
+  width: 1rem;
+  margin-right: 0.5rem;
+  transition: transform 150ms;
+}
+.form-title-chevron .form-active {
+  transform: rotateZ(90deg);
+}
+.form-title-chevron h2 {
+  margin-bottom: 0;
 }
 
 .table-container {
@@ -275,7 +304,7 @@ tbody td {
   padding-top: calc(4rem + 2rem);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 802px) {
   .form-field-xl {
     grid-column: span 12;
   }
@@ -294,6 +323,10 @@ tbody td {
 
   .form-field-xs {
     grid-column: span 3;
+  }
+
+  .form-field-lg-nl {
+    grid-column: span 12;
   }
 
   .form-field-sm-nl {
@@ -317,6 +350,10 @@ tbody td {
   .page-container {
     padding: 1rem;
     padding-top: calc(4rem + 1rem);
+  }
+
+  .form-field-lg-nl {
+    grid-column: span 12;
   }
 
   .form-field-md {
@@ -346,24 +383,31 @@ tbody td {
   align-items: center;
 }
 
-.form-btn-alert, .form-btn-primary, .form-btn-success, .input-btn {
+.form-btn-alert, .form-btn-primary, .form-btn-success, .input-btn-transparent, .input-btn-primary {
   height: 2.5rem;
   transition: opacity 150ms;
   outline: none;
   border: none;
 }
-.form-btn-alert:hover, .form-btn-primary:hover, .form-btn-success:hover, .input-btn:hover, .form-btn-alert:active, .form-btn-primary:active, .form-btn-success:active, .input-btn:active, .form-btn-alert:focus, .form-btn-primary:focus, .form-btn-success:focus, .input-btn:focus {
+.form-btn-alert:hover, .form-btn-primary:hover, .form-btn-success:hover, .input-btn-transparent:hover, .input-btn-primary:hover, .form-btn-alert:active, .form-btn-primary:active, .form-btn-success:active, .input-btn-transparent:active, .input-btn-primary:active, .form-btn-alert:focus, .form-btn-primary:focus, .form-btn-success:focus, .input-btn-transparent:focus, .input-btn-primary:focus {
   opacity: 0.8;
 }
 
-.input-btn {
+.input-btn-transparent, .input-btn-primary {
   width: 2.5rem;
   min-width: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #456cf6;
   cursor: pointer;
+}
+
+.input-btn-primary {
+  background-color: #456cf6;
+}
+
+.input-btn-transparent {
+  background-color: #353c4a;
 }
 
 .form-btn-alert, .form-btn-primary, .form-btn-success {
