--- a/niudot-app/src/assets/styles/_sidebar.scss
+++ b/niudot-app/src/assets/styles/_sidebar.scss
@@ -8,6 +8,11 @@
 	background-color: $nav-background;
 }
 
+.sidebar-hide {
+	left: -100%;
+	transition: position 2s;
+}
+
 .sidebar-logo {
 	text-align: center;
 	padding: 1rem;
