--- a/niudot-app/src/assets/styles/_mobile.scss
+++ b/niudot-app/src/assets/styles/_mobile.scss
@@ -35,7 +35,7 @@
 @media screen and (max-width: 576px) {
 	.sidebar-container {
 		// ! Cambiar esto luego
-		display: none;
+		// display: none;
 	}
 
 	.page {
