--- a/niudot-app/src/assets/styles/styles.css
+++ b/niudot-app/src/assets/styles/styles.css
@@ -224,6 +224,11 @@ tbody td {
   background-color: #283140;
 }
 
+.sidebar-hide {
+  left: -100%;
+  transition: position 2s;
+}
+
 .sidebar-logo {
   text-align: center;
   padding: 1rem;
@@ -294,14 +299,21 @@ tbody td {
   height: 4rem;
   position: fixed;
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  padding-left: 1rem;
+  padding: 0 1rem;
   background-color: #283140;
 }
 
 .page-container {
   padding: 2rem;
   padding-top: calc(4rem + 2rem);
+}
+
+.burger-menu {
+  width: 2rem;
+  height: 2rem;
+  background-color: white;
 }
 
 @media screen and (max-width: 802px) {
@@ -338,10 +350,6 @@ tbody td {
   }
 }
 @media screen and (max-width: 576px) {
-  .sidebar-container {
-    display: none;
-  }
-
   .page {
     width: 100%;
     margin: 0;
@@ -433,4 +441,22 @@ tbody td {
 
 .form-btn-alert {
   background-color: #bd783f;
+}
+
+.transition-enter {
+  opacity: 0;
+}
+
+.transition-active {
+  opacity: 1;
+  transition: opacity 2s;
+}
+
+.transition-exit {
+  opacity: 1;
+}
+
+.transition-exit-active {
+  opacity: 0;
+  transition: opacity 2s;
 }
